  - Fix incorrect message shown when you do not have enough money to use /plot claim.
    - Closes #4604.
  - API: Added NewShortTimeEvent.
    - Fires an event every 20s (configurable in the config.)
  - Fix metadata display issue on the status screens which could lead to metadata being displayed twice.
  - Make the town status screen prettier, with a new line for PVP, open and peaceful statuses.
  - Fix /n list and /t list permission nodes.
  - Fix slimefun unresearched items being able to bypass switch protections.
    - Re-closes #4065.
    - Closes https://github.com/Slimefun/Slimefun4/issues/2641
  - Modified the GatherResidentUUID task to no longer deleted residents which Mojang says do not have accounts.
    - The MojangAPI is apparently sending the incorrect response for many accounts which have not really been deleted.
  - New Towny Top Command, courtesy of Glare with PR #4605.
    - Reactivates the long-removed /towny top balance using the new cached bank balances.
  - Implemented configurable towny top size output, courtesy of Glare with PR #4614.
  - New Config Option: plugin.towny_top_size
    - default: 10
    - Sets the default size that /towny top commands display.
0.96.5.8:
  - Add (Public) to Town status screen upper bar.
  - Add (Conquered) to Town status screen upper bar.
  - API: Added TownyLoadedDatabaseEvent.
    - Called when has successfully loaded the database on startup as well as /ta database load and /ta reload db|all.
  - Add Nation#getMutualAllies() and Nation#hasMutualAlly() from SiegeWar.
  - API: add king and mayor UUIDs to the DeleteNationEvent & DeleteTownEvent.
  - Add some Time methods from SiegeWar.
  - Format for colour codes when retrieving TownyEconomyHandler#getFormattedBalance().
    - Closes #4619.
  - Fix for NPE which could be thrown via the PlayerInteractEvent when an item was used without clicking a block.
  - Fix /plot group toggle explosion showing the feedback message for fire.