@@ -5609,3 +5609,5 @@ v0.92.0.11:
     - Closes #4619.
   - Fix for NPE which could be thrown via the PlayerInteractEvent when an item was used without clicking a block.
   - Fix /plot group toggle explosion showing the feedback message for fire.
+  - API: Add NationTownLeaveEvent.
+  - API Change: NationPreTownKickEvent no longer extends NationPreTownLeaveEvent.
